# evqueue-core

./: .gitignore  AuthHandler.cpp  BinNetworkInputStream.cpp  CMakeLists.txt  Cluster.cpp  Configuration.cpp  ConfigurationReader.cpp  DB.cpp  Exception.cpp  FileManager.cpp  GarbageCollector.cpp  Logger.cpp  Logs.cpp  Notification.cpp  NotificationType.cpp  NotificationTypes.cpp  Notifications.cpp  ProcessManager.cpp  QueryHandlers.cpp  QueryResponse.cpp  Queue.cpp  QueuePool.cpp  README.md  RetrySchedule.cpp  RetrySchedules.cpp  Schedule.cpp  Scheduler.cpp  SocketQuerySAX2Handler.cpp  SocketResponseSAX2Handler.cpp  SocketSAX2Handler.cpp  Sockets.cpp  Statistics.cpp  Task.cpp  Tasks.cpp  User.cpp  Users.cpp  Workflow.cpp  WorkflowInstance.cpp  WorkflowInstanceAPI.cpp  WorkflowInstances.cpp  (+25 more)
debian/: changelog  control  copyright  evqueue-core.config  evqueue-core.evqueue.init  evqueue-core.evqueue.service  evqueue-core.links  evqueue-core.templates  postinst  postrm  prerm  rules
debian/DEBIAN/: conffiles  postinst  postrm  prerm
debian/po/: de.po  (+7 more)
etc/: evqueue.conf
include/: APIObjectList.h  AuthHandler.h  BinNetworkInputStream.h  Cluster.h  Configuration.h  DB.h  Exception.h  FileManager.h  Logger.h  Notification.h  NotificationTypes.h  Notifications.h  ProcessManager.h  QueryHandlers.h  QueryResponse.h  Queue.h  QueuePool.h  Retrier.h  RetrySchedule.h  RetrySchedules.h  Schedule.h  Scheduler.h  SequenceGenerator.h  SocketQuerySAX2Handler.h  SocketResponseSAX2Handler.h  SocketSAX2Handler.h  Sockets.h  Statistics.h  Task.h  Tasks.h  User.h  Users.h  Workflow.h  WorkflowInstance.h  WorkflowInstanceAPI.h  WorkflowInstances.h  WorkflowParameters.h  WorkflowSchedule.h  WorkflowScheduler.h  WorkflowSchedules.h  (+10 more)
src/: APISession.cpp  ActiveConnections.cpp  AuthHandler.cpp  BinNetworkInputStream.cpp  CMakeLists.txt  Client.cpp  ClientBase.cpp  Cluster.cpp  Configuration.cpp  ConfigurationEvQueue.cpp  ConfigurationReader.cpp  DB.cpp  DOMDocument.cpp  DOMElement.cpp  DOMNode.cpp  DOMText.cpp  DOMXPath.cpp  DOMXPathResult.cpp  DataPiper.cpp  DataSerializer.cpp  Datastore.cpp  Events.cpp  Exception.cpp  ExceptionWorkflowContext.cpp  FileManager.cpp  Filesystem.cpp  GarbageCollector.cpp  Git.cpp  LibGit2.cpp  Logger.cpp  LoggerAPI.cpp  LoggerNotifications.cpp  Logs.cpp  NetworkInputSource.cpp  Notification.cpp  NotificationType.cpp  NotificationTypes.cpp  Notifications.cpp  ProcessExec.cpp  ProcessManager.cpp  (+66 more)
src/API/: APISession.cpp  ActiveConnections.cpp  AuthHandler.cpp  Client.cpp  ClientBase.cpp  QueryHandlers.cpp  QueryResponse.cpp  SocketQuerySAX2Handler.cpp  SocketResponseSAX2Handler.cpp  SocketSAX2Handler.cpp  Statistics.cpp  XMLMessage.cpp  XMLQuery.cpp  XMLResponse.cpp  handle_connection.cpp  ping.cpp  tools.cpp
src/Cluster/: Cluster.cpp  UniqueAction.cpp
src/Configuration/: Configuration.cpp  ConfigurationEvQueue.cpp  ConfigurationReader.cpp  README.md
src/Crypto/: Random.cpp  Sha1String.cpp  base64.cpp  hmac.cpp  pbkdf2.cpp  sha1.c
src/DB/: DB.cpp  DBConfig.cpp  GarbageCollector.cpp  SequenceGenerator.cpp  tables.cpp  tools_db.cpp
src/DOM/: DOMDocument.cpp  DOMElement.cpp  DOMNamedNodeMap.cpp  DOMNode.cpp  DOMText.cpp  DOMXPath.cpp  DOMXPathResult.cpp
src/ELogs/: Alert.cpp  AlertTriggers.cpp  Alerts.cpp  Channel.cpp  ChannelGroup.cpp  ChannelGroups.cpp  Channels.cpp  ConfigurationELogs.cpp  ELog.cpp  ELogs.cpp  Field.cpp  Fields.cpp  GC.cpp  LogStorage.cpp  tables.cpp
src/Exception/: Exception.cpp  ExceptionManager.cpp  ExceptionWorkflowContext.cpp
src/Git/: ConfigurationGit.cpp  Git.cpp  LibGit2.cpp
src/IO/: BinNetworkInputStream.cpp  FileManager.cpp  Filesystem.cpp  NetworkConnections.cpp  NetworkInputSource.cpp  Sockets.cpp
src/Logger/: Logger.cpp  LoggerAPI.cpp  LoggerNotifications.cpp
src/Logs/: Channel.cpp  ChannelGroup.cpp  ChannelGroups.cpp  Channels.cpp  ELog.cpp  ELogs.cpp  Field.cpp  Fields.cpp  LogStorage.cpp  Logs.cpp  LogsAPI.cpp  LogsNotifications.cpp
src/Notification/: Notification.cpp  NotificationType.cpp  NotificationTypes.cpp  Notifications.cpp
src/Process/: Args.cpp  DataPiper.cpp  DataSerializer.cpp  Forker.cpp  Monitor.cpp  NotificactionMonitor.cpp  PIDFile.cpp  ProcessExec.cpp  ProcessManager.cpp  tools_ipc.cpp  tools_proc.cpp
src/Queue/: Queue.cpp  QueuePool.cpp
src/Schedule/: Retrier.cpp  RetrySchedule.cpp  RetrySchedules.cpp  Schedule.cpp  Scheduler.cpp  WorkflowSchedule.cpp  WorkflowScheduler.cpp  WorkflowSchedules.cpp  retry_schedule.xsd  retry_schedule.xsd.cpp
src/Storage/: Display.cpp  Displays.cpp  Launcher.cpp  Launchers.cpp  Storage.cpp  Variable.cpp  tables.cpp
src/Tag/: Tag.cpp  Tags.cpp
src/Thread/: ConsumerThread.cpp  WaiterThread.cpp
src/User/: User.cpp  Users.cpp
src/Utils/: Date.cpp
src/WS/: APIWorker.cpp  ConfigurationWS.cpp  Events.cpp  EventsWorker.cpp  WSServer.cpp
src/Workflow/: Workflow.cpp  WorkflowParameters.cpp  Workflows.cpp  workflow.xsd  workflow.xsd.cpp
src/WorkflowInstance/: Datastore.cpp  ExceptionWorkflowContext.cpp  Task.cpp  WorkflowInstance.cpp  WorkflowInstanceAPI.cpp  WorkflowInstances.cpp  automatic_tags.cpp  condition_loop.cpp  custom_filters.cpp  job_task.cpp  retry.cpp  savepoint.cpp  start_stop.cpp  value.cpp
src/XML/: XMLFormatter.cpp  XMLString.cpp  XMLUtils.cpp
src/XPath/: WorkflowXPathFunctions.cpp  XPathAPI.cpp  XPathEval.cpp  XPathFunctions.cpp  XPathOperators.cpp  XPathParser.cpp  XPathTokens.cpp  debug.cpp
src/Zip/: Zip.cpp
src/include/: APIObjectList.h  APISession.h  ActiveConnections.h  AuthHandler.h  BinNetworkInputStream.h  Client.h  ClientBase.h  Cluster.h  Configuration.h  ConfigurationEvQueue.h  ConfigurationReader.h  DB.h  DOMDocument.h  DOMElement.h  DOMNamedNodeMap.h  DOMNode.h  DOMText.h  DOMXPath.h  DOMXPathResult.h  DataSerializer.h  Events.h  Exception.h  ExceptionManager.h  FileManager.h  GarbageCollector.h  Git.h  LibGit2.h  Logger.h  LoggerAPI.h  Logs.h  LogsNotifications.h  NetworkInputSource.h  Notification.h  NotificationType.h  NotificationTypes.h  Notifications.h  ProcessExec.h  ProcessManager.h  QueryResponse.h  Queue.h  (+46 more)
(+157 files in other folders)
